--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_build/html
-          publish_branch: main
+          publish_branch: gh-pages
           force_orphan: true  # Deletes previous history (keeps gh-pages clean)
