--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,29 @@
-name: Deploy Sphinx Docs to GitHub Pages
+name: Deploy SSOS Docs to GitHub Pages
 
 on:
   push:
-    branches:
-      - main  # Trigger deployment when pushing to main
+    branches: [ main ]
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-      
-      - name: Set Up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.x'
-      
-      - name: Install Sphinx and Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install sphinx myst-parser sphinx_rtd_theme
 
-      - name: Build HTML
-        run: |
-          sphinx-build -b html source/ _build/html
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: ./_build/html
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./_build/html
-          publish_branch: gh-pages
-          force_orphan: true  # Deletes previous history (keeps gh-pages clean)
+        uses: actions/deploy-pages@v2
